package pen;

public enum MechanismType {
    CAP,
    CLICK
}
