package pen;

public enum PenType {
    BALLPOINT,
    GEL,
    INK
}
