package pen;

public interface RefillStrategy {
    void refill(String freshColor);
}
