package pen;

public interface WriteStrategy {
    void perform(String inkColor);
}
